src/objects/BMCServiceDesk__LookupFilter__c.object
<CustomObject>
    <description>This object allows you to store data for lookup filters.</description>
    <fields>
        <fullName>BMCServiceDesk__ApplyToSelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field applies lookup filters in Self Service.</description>
        <inlineHelpText>Select this field to apply lookup filters in Self Service.</inlineHelpText>
        <label>ApplyToSelfService</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Console__c</fullName>
        <description>This field stores the API name of the console object.</description>
        <inlineHelpText>From the list of options, select the Console object.</inlineHelpText>
        <label>Console</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FilterFor__c</fullName>
        <description>This field stores the API name of the filter for object.</description>
        <inlineHelpText>From the list of options, select the Filter For object.</inlineHelpText>
        <label>Filter For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FilterLogic__c</fullName>
        <description>This field stores the specified conditions for the filter logic.</description>
        <inlineHelpText>Enter the values to specify the conditions to set the logical filters.</inlineHelpText>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FilterType__c</fullName>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field marks the object as inactive.</description>
        <inlineHelpText>Select this field if the lookup object is no longer valid.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__QueryCondition__c</fullName>
        <description>This field stores the query conditions.</description>
        <inlineHelpText>Use this field to enter the query conditions.</inlineHelpText>
        <label>Query Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lookup Filter</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Console__c</columns>
        <columns>BMCServiceDesk__FilterFor__c</columns>
        <columns>BMCServiceDesk__FilterLogic__c</columns>
        <columns>BMCServiceDesk__FilterType__c</columns>
        <columns>BMCServiceDesk__Inactive__c</columns>
        <columns>BMCServiceDesk__QueryCondition__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lookup Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__UniqueLookupFilterNameCheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISNEW(), NOT( ISBLANK( VLOOKUP( $ObjectType.BMCServiceDesk__LookupFilter__c.Fields.Name , $ObjectType.BMCServiceDesk__LookupFilter__c.Fields.Name , NULLVALUE(Name, Name) ) ) ) , IF( ISCHANGED(Name) , IF( LOWER( PRIORVALUE(Name) ) != LOWER(Name)  &amp;&amp; ( LOWER(Name) = LOWER( VLOOKUP($ObjectType.BMCServiceDesk__LookupFilter__c.Fields.Name, $ObjectType.BMCServiceDesk__LookupFilter__c.Fields.Name, Name) ) ) , TRUE, FALSE) , FALSE) )</errorConditionFormula>
        <errorMessage>Filter name must be unique</errorMessage>
    </validationRules>
</CustomObject>